--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WH 72 Model 1342</title>
+  <title>EPS WH72</title>
   <meta name="description" content="Notenergiesystem Rollstuhl">
   <meta name="keywords" content="Notenergiesystem Rollstuhl">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
@@ -21,7 +21,7 @@
         <div class="container">
           <div class="navbar-brand">
             <a class="navbar-item" href="#">
-              WH 72 Modell 1342
+              EPS WH72
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
@@ -48,10 +48,10 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title">
-          WH 72 Modell 1342
+          EPS WH72
         </h1>
         <h2 class="subtitle">
-          Das WH 72 Modell 1342 lässt Sie die Welt ganz neu entdecken.
+          Das EPS WH72 lässt Sie die Welt ganz neu entdecken.
         </h2>
       </div>
     </div>
