--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="card-content">
             <div class="content">
               <h4>Allgemeine Beschreibung</h4>
-              <p>Sie wollen mehr Freiheiten in Ihrer Wahl des Ziels. Oftmals sind sie durch den vorinstallierten Akku in dieser Hinsicht beschränkt. Doch nicht mehr lange! Rüsten Sie schnell und einfach das Modell 1342 mit Hilfe unserer qualifizierten Mitarbeiter nach und Sie erhalten eine Akkulaufzeit von extra 20 Minuten. Aber nicht nur das! Auch ein ganz neuen Komfort , der durch den automatischen Übergang zum Notstromsystem sich zeigt, steigert die Benutzerfreundlichkeit Ihres Rollstuhls in Sekunden.</p>
+              <p>Sie wollen mehr Freiheiten in Ihrer Wahl des Ziels. Oftmals sind sie durch den vorinstallierten Akku in dieser Hinsicht beschränkt. Doch nicht mehr lange! Rüsten Sie schnell und einfach das EPS WH72 mit Hilfe unserer qualifizierten Mitarbeiter nach und Sie erhalten eine Akkulaufzeit von extra 20 Minuten. Aber nicht nur das! Auch ein ganz neuen Komfort , der durch den automatischen Übergang zum Notstromsystem sich zeigt, steigert die Benutzerfreundlichkeit Ihres Rollstuhls in Sekunden.</p>
               <p><a href="#">Erfahre mehr</a></p>
             </div>
           </div>
@@ -88,7 +88,7 @@
           <div class="card-content">
             <div class="content">
               <h4>Technische Details</h4>
-              <p>Sie müssen sich nie wieder Sorgen darüber machen, nicht zu wissen wann ihr Akkustand auf null sinkt. Mithilfe einer Leuchte, werden Sie informiert das der Hauptakku leer ist und sie nun mit der Notstromversorgung weiterfahren. All diese Punkte sind nur ein kleiner Ausschnitt, von den was das WH 72 Modell 1342 alles bietet.</p>
+              <p>Sie müssen sich nie wieder Sorgen darüber machen, nicht zu wissen wann ihr Akkustand auf null sinkt. Mithilfe einer Leuchte, werden Sie informiert das der Hauptakku leer ist und sie nun mit der Notstromversorgung weiterfahren. All diese Punkte sind nur ein kleiner Ausschnitt, von den was das EPS WH72 alles bietet.</p>
               <p><a href="#">Erfahre mehr</a></p>
             </div>
           </div>
