--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <h1 class="title">
           EPS WH72
         </h1>
+        <img src="img/zeichnung.png" height="120px;" width="120px;">
         <h2 class="subtitle">
           Das EPS WH72 lässt Sie die Welt ganz neu entdecken.
         </h2>
