--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <script type="text/javascript">
 	function allgemein() {
 	swal({
-	  title: "Überschift",
+	  title: "Überschrift",
 	  text: "Beispieltext",
 	  button: "Fenster schließen!",
 	});}
